alteracoes css forms e header

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,7 +1,8 @@
 .banner {
     background-color: #6278F7;
     display: flex;
-    justify-content: space-between;
+    /*justify-content: space-between;*/
+    justify-content: space-evenly;
 }
 
 .banner img {
