--- a/src/components/DropdownList/DropdownList.css
+++ b/src/components/DropdownList/DropdownList.css
@@ -5,7 +5,8 @@
 }
 
 .dropdown-list label {
-    display: block;
+    display: flex;
+    /*display: block;*/
     margin-bottom: 8px;
     font-size: 24px;
 }
