--- a/src/components/TextField/TextField.css
+++ b/src/components/TextField/TextField.css
@@ -3,7 +3,8 @@
 }
 
 .text-field label {
-    display: block;
+    display: flex;
+    /*display: block;*/
     margin-bottom: 8px;
     font-size: 24px;
 }
