--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,31 +1,20 @@
 footer {
     max-width: 100%;
     background-color: #6278F7;
-    /*text-align: center;*/
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
     color: #F0F0F0;
     font-size: 24px;
 }
 
-footer .social-media {
-    padding: 75px;
-    margin-top: 10px;
+footer .footer-wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 footer .social-media img {
-    padding-right: 32px;
-    margin-left: 50px;
+    margin: 5px;
 }
-
-footer .logo {
-    padding: 50px;
-    margin-top: 10px;
-}
-
-footer .development {
-    padding: 55px;
-    margin-right: 50px;
-}
-
